--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://gnoah.github.io/gasy-ecocitizen",
   "name": "gasy-ecocitizen",
   "version": "0.1.0",
   "private": true,
